--- a/Ayoub/network_map/network_practice2.html
+++ b/Ayoub/network_map/network_practice2.html
@@ -7,11 +7,11 @@
 <script src="https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.js"></script>
 <link href="https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.css" rel="stylesheet" />
 <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
-<script src="./translators.js" type="text/javascript"></script>
-<script src="./authors.js" type="text/javascript"></script>
-<script src="./trans2.js" type="text/javascript"></script>
-<script src="./author2.js" type="text/javascript"></script>
-<script src="./sum_groupby.js" type="text/javascript"></script>
+<script src="../translators.js" type="text/javascript"></script>
+<script src="../authors.js" type="text/javascript"></script>
+<script src="../trans2.js" type="text/javascript"></script>
+<script src="../author2.js" type="text/javascript"></script>
+<script src="../sum_groupby.js" type="text/javascript"></script>
 <style>
 	body { margin: 0; padding: 0; }
 	#map { position: absolute; top: 0; bottom: 0; width: 100%; }
