--- a/Ayoub/network_map/network_practice2.html
+++ b/Ayoub/network_map/network_practice2.html
@@ -14,11 +14,11 @@
 </style>
 </head>
 <body>
-<script src="Ayoub/network_map/js/translators.js" type="text/javascript"></script>
-<script src="Ayoub/network_map/js/authors.js" type="text/javascript"></script>
-<script src="Ayoub/network_map/js/trans2.js" type="text/javascript"></script>
-<script src="Ayoub/network_map/js/author2.js" type="text/javascript"></script>
-<script src="Ayoub/network_map/js/sum_groupby.js" type="text/javascript"></script>
+<script src="js/translators.js" type="text/javascript"></script>
+<script src="js/authors.js" type="text/javascript"></script>
+<script src="js/trans2.js" type="text/javascript"></script>
+<script src="js/author2.js" type="text/javascript"></script>
+<script src="js/sum_groupby.js" type="text/javascript"></script>
 <style>
 #menu {
 background: #fff;
