--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
 <section class="jumbotron">
     <h1 class="jumbotron-heading"><a href="index.html">Chris Gernon</a></h1>
-    <h2 class="about" style="text-align:center;margin-top:25px;margin-bottom:25px;color:grey;"><pre><a href="./index.html">home</a>  |  <a href="./GIS/index.html">gis</a>  |  <a href="./cartography/index.html">cartography</a>  |  <a href="about.html">projects</a>   |  <a href="about.html">about</a></pre></h2></pre></h2>
-    <!--<h2 class="about">Hello! I'm a visual designer with interests ranging from interactive cartography and data visualization to generative art and painting. I've worked with the Los Angeles Times Data and Graphics department, the Voting Rights Data Institute at Tufts and MIT, and as a research assisant at Middlebury College. I am currently a senior at Middlebury pursuing a joint degree in geography and computer science (expected graduation in Winter 2021).</h2>-->
+    <h2 style="text-align:center;margin-top:25px;margin-bottom:25px;color:grey;"><pre><a href="./index.html">home</a>  |  <a href="./GIS/index.html">gis</a>  |  <a href="./cartography/index.html">cartography</a>  |  <a href="./projects/prison.html">Projects</a>  |  <a href="about.html">about</a></pre></h2>
+    <div class="blurb" style= "color: white;margin-top:50px;">I am a senior at Middlebury College majoring in Geography and minoring in Gender, Sexuality, and Feminist Studies. 
+      </div>
 </section>
 <div class="w3-row-padding" style="margin-bottom:128px">
     <div class="w3-half">
@@ -51,7 +52,7 @@
       <img src="./home_page/pictures/PSA.jpg" style="width:100%">
       <img src="./home_page/pictures/landcover_maine_towns.jpg" style="width:100%">
       <img src="./home_page/pictures/solar_panel_dev.jpg" style="width:100%">
-      <img src="./home_page/pictures/Hub_Overview.jpg" style="width:100%">
+      <img src="./home_page/pictures/hub_Overview.jpg" style="width:100%">
       <img src="./home_page/pictures/twitter_heatMap.png" style="width:100%">
       <img src="./home_page/pictures/malawi_vulnerability.png" style="width:100%">
 
