--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 <section class="jumbotron">
     <h1 class="jumbotron-heading"><a href="index.html">Chris Gernon</a></h1>
     <h2 style="text-align:center;margin-top:25px;margin-bottom:25px;color:grey;"><pre><a href="./index.html">home</a>  |  <a href="./GIS/index.html">gis</a>  |  <a href="./cartography/index.html">cartography</a>  |  <a href="./projects/prison.html">Projects</a>  |  <a href="about.html">about</a></pre></h2>
-    <div class="blurb" style= "color: white;margin-top:50px;">I am a senior at Middlebury College majoring in Geography and minoring in Gender, Sexuality, and Feminist Studies. 
-      </div>
+    <div class="blurb" style= "color: white;margin-top:50px;"> I am an independent consultant with a background in geography and gender studies.
 </section>
 <div class="w3-row-padding" style="margin-bottom:128px">
     <div class="w3-half">
